fix(lists): broken layout on IOS safari

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -3,6 +3,10 @@ html {
   overflow-x: auto;
 }
 
+[class^='container-'] {
+  overflow: hidden;
+}
+
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
